--- a/_config.yml
+++ b/_config.yml
@@ -28,15 +28,8 @@
 
 
 header_pages:
-  - Introduction.md
-#  - Oceanverse.md
   - Faq.md
-#  - Questions.md
-  - Handbook.md
-  - dashboard.md
   - Logistics.md
-  - content.md
-  - feedback.md
 
 # header:
 #   dropdown_menu:
@@ -53,22 +46,23 @@ header_pages:
 
 
 markdown: kramdown
-title: AI Vicharana Shala
-email1: aivs@iitrpr.ac.in
-email2: ai.school@ihub-awadh.in
-phone1: "+919205250447"
-phone2: "+919419410786"
+title: Swagatam
+# email1: aivs@iitrpr.ac.in
+# email2: ai.school@ihub-awadh.in
+# phone1: "+919205250447"
+# phone2: "+919419410786"
 description: >- # this means to ignore newlines until "baseurl:"
   This is a Description for the website
 
-baseurl: /aicamp # the subpath of your site, e.g. /blog
-url: https://sudarshansudarshan.github.io # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: /swagatam # the subpath of your site, e.g. /blog
+url: https://Ashutosh-iitrpr.github.io # the base hostname & protocol for your site, e.g. http://example.com
 #instagram_username: soni_nishit_
 #twitter_username: jekyllrb
 #github_username:  jekyll
-youtube_username: "@Vicharana_Shala"
+youtube_username: "@VidyaVaniIITRopar"
 linkedin_username: "Vicharana Shala"
-instagram_username: aivs.iitrpr
+instagram_username: iit_rpr_official
+# linktree_username: iitropar
 
 
 # Build settings
