--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ title: Joy of Computing
 description: >- # this means to ignore newlines until "baseurl:"
   This is a Description for the website
 
-baseurl: /404.html # the subpath of your site, e.g. /blog
+baseurl: /joc # the subpath of your site, e.g. /blog
 url: https://Ashutosh-iitrpr.github.io # the base hostname & protocol for your site, e.g. http://example.com
 #instagram_username: soni_nishit_
 #twitter_username: jekyllrb
