--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ url: https://Ashutosh-iitrpr.github.io # the base hostname & protocol for your s
 #twitter_username: jekyllrb
 #github_username:  jekyll
 youtube_username: "@VidyaVaniIITRopar"
-linkedin_username: iitropar
+linkedin_username: school/iitropar
 instagram_username: iit_rpr_official
 # linktree_username: iitropar
 
