--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ url: https://Ashutosh-iitrpr.github.io # the base hostname & protocol for your s
 #github_username:  jekyll
 youtube_username: "@VidyaVaniIITRopar"
 linkedin_username: school/iitropar
-instagram_username: iit_rpr_official
+instagram_username: iit_ropar_official
 # linktree_username: iitropar
 
 
